# pokeranger2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  meson.build  meson.options  ranger2.us.xMAP
asm/: arm9_020010E4.s  arm9_0200120C.s  arm9_02001294.s  arm9_02001458.s  arm9_02001488.s  arm9_02001D28.s  arm9_02001EB4.s  arm9_02001ED0.s  arm9_02002054.s  arm9_020023EC.s  arm9_02002AD4.s  arm9_02002AEC.s  arm9_02002BA4.s  arm9_02002C34.s  arm9_02003124.s  arm9_020031B8.s  arm9_020031E8.s  arm9_02003274.s  arm9_020032CC.s  arm9_02003358.s  arm9_020033B0.s  arm9_0200343C.s  arm9_02003494.s  arm9_02003520.s  arm9_02003578.s  arm9_02003604.s  arm9_0200365C.s  arm9_020036E8.s  arm9_02003718.s  arm9_02003938.s  arm9_02003988.s  arm9_02003B64.s  arm9_020040C8.s  arm9_020049A4.s  arm9_02004A04.s  arm9_020050C8.s  arm9_02005150.s  arm9_02006000.s  arm9_02006350.s  arm9_02006C04.s  (+68 more)
asm/include/: arm9.inc  arm9_020010E4.inc  arm9_0200120C.inc  arm9_02001294.inc  arm9_02001458.inc  arm9_02001488.inc  arm9_02001D28.inc  arm9_02001EB4.inc  arm9_02001ED0.inc  arm9_02002054.inc  arm9_020023EC.inc  arm9_02002AD4.inc  arm9_02002AEC.inc  arm9_02002C34.inc  arm9_02003124.inc  arm9_020031E8.inc  arm9_02003274.inc  arm9_020032CC.inc  arm9_02003358.inc  arm9_020033B0.inc  arm9_0200343C.inc  arm9_02003494.inc  arm9_02003520.inc  arm9_02003578.inc  arm9_02003604.inc  arm9_0200365C.inc  arm9_020036E8.inc  arm9_02003938.inc  arm9_02003988.inc  arm9_02004A04.inc  arm9_020050C8.inc  arm9_02006000.inc  arm9_02006350.inc  arm9_02006C04.inc  arm9_0200978C.inc  arm9_02009D8C.inc  arm9_0200A804.inc  arm9_0200B714.inc  arm9_0200C38C.inc  arm9_0200F8BC.inc  (+57 more)
lib/NitroDWC/: meson.build
lib/NitroDWC/asm/: libdwcac.s  libdwcauth.s  libdwcbm.s  libdwcnd.s  libdwcnhttp.s  libdwcutil.s
lib/NitroDWC/asm/include/: libdwcac.inc  libdwcauth.inc  libdwcbm.inc  libdwcnd.inc  libdwcnhttp.inc  libdwcutil.inc
res/prebuilt/data/: battle_line01.NCBR  battle_line01.NCLR  meson.build  shadow.NCBR  shadow.NCLR
res/prebuilt/data/Script/: meson.build
res/prebuilt/data/Script/area/: m000.fsb  m001.fsb  m003.fsb  m004.fsb  m005.fsb  m007.fsb  m008.fsb  m009.fsb  m010.fsb  m011.fsb  m014.fsb  m015.fsb  m016.fsb  m017.fsb  m018.fsb  m019.fsb  m020.fsb  m021.fsb  m022.fsb  m023.fsb  m024.fsb  m025.fsb  m026.fsb  m027.fsb  m028.fsb  m029.fsb  m030.fsb  m032.fsb  m033.fsb  m034.fsb  m035.fsb  m036.fsb  m038.fsb  m039.fsb  m041.fsb  m042.fsb  m043.fsb  m044.fsb  m201.fsb  meson.build
res/prebuilt/data/Script/battle/: meson.build
res/prebuilt/data/Script/chapter/: c002.fsb  c003.fsb  c004.fsb  c005.fsb  c006.fsb  c007.fsb  c008.fsb  c009.fsb  c010.fsb  c011.fsb  c012.fsb  c013.fsb  c014.fsb  c015.fsb  c016.fsb  c018.fsb  c019.fsb  c020.fsb  c021.fsb  c022.fsb  c023.fsb  c024.fsb  c025.fsb  c026.fsb  c027.fsb  c028.fsb  c029.fsb  c030.fsb  c031.fsb  c032.fsb  c033.fsb  c034.fsb  c035.fsb  c036.fsb  c037.fsb  c038.fsb  c039.fsb  c040.fsb  c041.fsb  c042.fsb  (+29 more)
res/prebuilt/data/Script/field/: meson.build
res/prebuilt/data/Script/quest/: meson.build  q000.fsb  q001.fsb  q002.fsb  q003.fsb  q004.fsb  q005.fsb  q006.fsb  q007.fsb  q008.fsb  q009.fsb  q010.fsb  q011.fsb  q012.fsb  q013.fsb  q014.fsb  q015.fsb  q016.fsb  q017.fsb  q018.fsb  q019.fsb  q020.fsb  q021.fsb  q022.fsb  q023.fsb  q024.fsb  q025.fsb  q026.fsb  q027.fsb  q028.fsb  q029.fsb  q030.fsb  q031.fsb  q032.fsb  q033.fsb  q034.fsb  q035.fsb  q036.fsb  q037.fsb  q038.fsb  (+23 more)
res/prebuilt/data/Script/system/: meson.build  system.fsb  system001.fsb
res/prebuilt/data/Sound/: meson.build
res/prebuilt/data/battle/: meson.build
res/prebuilt/data/battle/bg/: meson.build
res/prebuilt/data/battle/result/: meson.build
res/prebuilt/data/battle/system/: meson.build
res/prebuilt/data/effect/: meson.build
res/prebuilt/data/encyclo/: meson.build
res/prebuilt/data/ending/: meson.build
res/prebuilt/data/event/: meson.build
res/prebuilt/data/eventicon/: meson.build
res/prebuilt/data/field/: meson.build
res/prebuilt/data/field/character/: meson.build
res/prebuilt/data/field/effect/: dokarimo02.ntft  dokarimo03.ntft  kiri01.ntft  kiri02.ntft  komorebi.ntft  meson.build  suna01.ntft  suna02.ntft
res/prebuilt/data/field/map/: imakuni.map.dat.lz  imakuni.map.tex.lz  m001_001.map.dat.lz  m001_001.map.tex.lz  m001_002.map.dat.lz  m001_003a.map.dat.lz  (+737 more)
res/prebuilt/data/font/: font_jp_lc_utf8.NFTR  font_jp_utf8.NFTR  font_us_lc_utf8.NFTR  font_us_utf8.NFTR  meson.build  prs_jp.NCLR  prs_lc_jp.NCLR
res/prebuilt/data/interface/: i072_00.ntfp  i072_00.ntft  i072_01.ntft  i072_02.ntft  meson.build
res/prebuilt/data/menu/: meson.build
res/prebuilt/data/message/: meson.build
res/prebuilt/data/npc/: meson.build
res/prebuilt/data/opening/: meson.build
res/prebuilt/data/param/: meson.build
res/prebuilt/data/player/: meson.build
res/prebuilt/data/poke/: meson.build
res/prebuilt/data/pokeOBJ/: meson.build
res/prebuilt/data/sendbin/: meson.build
res/prebuilt/data/system/: meson.build
res/prebuilt/data/targetOBJ/: meson.build
res/prebuilt/data/title/: meson.build
res/prebuilt/data/uppict/: meson.build
src/: CGame.cpp  CNameInputScene.cpp  CPowerManage.cpp  CPowerManage_2.cpp  CTPEmulator.cpp  CTouchPanel.cpp  UnkClass_02001C04.cpp  UnkClass_02001C20.cpp  UnkClass_020023EC.cpp  UnkClass_02003718.cpp  UnkClass_020091E8.cpp  UnkClass_0200BBC0.cpp  UnkClass_0200BBC8.cpp  UnkClass_020B26A0.cpp  debug.cpp  heap.cpp  heap_operators.cpp  main.cpp  meson.build  ov0_0214F830.cpp  overlay_manager.cpp  sub_02001184.cpp  sub_02001248.cpp  sub_02001D28.cpp  sub_02006000.cpp  sub_02006B60.cpp  sub_02010448.cpp  sub_0202B80C.cpp  sub_0204436C.cpp  sub_02044440.cpp  sub_02046D40.cpp
src/file/: CArchiveGuard.cpp  CBGNCGRFile.cpp  CBinaryFile.cpp  CBinaryFileMes.cpp  CBinaryFile_1.cpp  CNANRFile.cpp  CNCERFile.cpp  CNCGRFile.cpp  CNCLRFile.cpp  CNSCRFile.cpp
src/primitive/: CPrimitive.cpp  CPrimitiveLINE.cpp  CPrimitiveQUAD.cpp  CPrimitiveRECT.cpp  CPrimitiveSPHERE.cpp  CPrimitiveTRIANGLE.cpp  CSoftwareSprite.cpp
(+4268 files in other folders)
