pokeranger2_asm = files(
    'arm9_020010E4.s',
    'arm9_02001294.s',
    'arm9_02001D28.s',
    'arm9_02002AD4.s',
    'overlay_00.s',
    'overlay_01.s',
    'overlay_02.s',
    'overlay_03.s',
    'overlay_04.s',
    'overlay_05.s',
    'overlay_06.s',
    'overlay_07.s',
    'overlay_08.s',
    'overlay_09.s',
    'overlay_10.s',
    'overlay_11.s',
    'overlay_12.s',
    'overlay_13.s',
    'overlay_14.s',
    'overlay_15.s',
    'overlay_16.s',
    'overlay_17.s',
    'overlay_18.s',
    'overlay_19.s',
    'overlay_20.s',
    'overlay_21.s',
    'overlay_22.s',
    'overlay_23.s',
    'overlay_24.s',
    'overlay_25.s',
    'overlay_26.s',
    'overlay_27.s',
    'overlay_28.s',
    'overlay_29.s',
)
