pokeranger2_asm = files(
    'arm9_020010E4.s',
    'arm9_02001294.s',
    'arm9_02001D28.s',
    'arm9_020023EC.s',
    'arm9_02002AD4.s',
    'overlay_00_0211C9E0.s',
    'overlay_01_0211C9E0.s',
    'overlay_02_0211C9E0.s',
    'overlay_03_0211C9E0.s',
    'overlay_04_0211C9E0.s',
    'overlay_05_0211C9E0.s',
    'overlay_06_0211C9E0.s',
    'overlay_07_0211C9E0.s',
    'overlay_08_0211C9E0.s',
    'overlay_09_0211C9E0.s',
    'overlay_10_0211C9E0.s',
    'overlay_11_0211C9E0.s',
    'overlay_12.s',
    'overlay_13.s',
    'overlay_14.s',
    'overlay_15.s',
    'overlay_16.s',
    'overlay_17.s',
    'overlay_18.s',
    'overlay_19_0211C9E0.s',
    'overlay_20_0211C9E0.s',
    'overlay_21_0211C9E0.s',
    'overlay_22_0211C9E0.s',
    'overlay_23_0211C9E0.s',
    'overlay_24_0211C9E0.s',
    'overlay_25_0211C9E0.s',
    'overlay_26_0211C9E0.s',
    'overlay_27_0211C9E0.s',
    'overlay_28_0211C9E0.s',
    'overlay_29_0211C9E0.s',
)
