pokeranger2_cxx = files(
    'CTouchPanel.cpp',
    'heap.cpp',
    'main.cpp',
    'sub_02001D28.cpp',
    'UnkClass_0200BBC0.cpp',
    'UnkClass_0200BBC8.cpp',
    'UnkClass_020091E8.cpp',
    'UnkClass_020B26A0.cpp',
    'CPowerManage.cpp',
    'CGame.cpp',
    'sub_0202B80C.cpp',
    'overlay_manager.cpp',
    'sub_02046D40.cpp',
    'sub_02044440.cpp',
    'sub_0204436C.cpp',
    'heap_operators.cpp',
    'UnkClass_02001C04.cpp',
    'UnkClass_020023EC.cpp',
    'debug.cpp',
)
