prebuilt_files = [
    'e089_LZ.bin',
    'e189_LZ.bin',
    'e097_LZ.bin',
    'e197_LZ.bin',
    'e185_LZ.bin',
    'e085_LZ.bin',
    'e152_LZ.bin',
    'e052_LZ.bin',
    'e131_LZ.bin',
    'e031_LZ.bin',
    'e040_LZ.bin',
    'e140_LZ.bin',
    'e023_LZ.bin',
    'e123_LZ.bin',
    'e076_LZ.bin',
    'e176_LZ.bin',
    'e015_LZ.bin',
    'e115_LZ.bin',
    'e068_LZ.bin',
    'e168_LZ.bin',
    'e019_LZ.bin',
    'e164_LZ.bin',
    'e064_LZ.bin',
    'e107_LZ.bin',
    'e007_LZ.bin',
    'e021_LZ.bin',
    'e121_LZ.bin',
    'e042_LZ.bin',
    'e142_LZ.bin',
    'e133_LZ.bin',
    'e033_LZ.bin',
    'e150_LZ.bin',
    'e050_LZ.bin',
    'e105_LZ.bin',
    'e005_LZ.bin',
    'e178_LZ.bin',
    'e078_LZ.bin',
    'e166_LZ.bin',
    'e066_LZ.bin',
    'e017_LZ.bin',
    'e117_LZ.bin',
    'e009_LZ.bin',
    'e074_LZ.bin',
    'e174_LZ.bin',
    'e187_LZ.bin',
    'e087_LZ.bin',
    'e199_LZ.bin',
    'e099_LZ.bin',
    'e095_LZ.bin',
    'e195_LZ.bin',
    'e013_LZ.bin',
    'e113_LZ.bin',
    'e070_LZ.bin',
    'e170_LZ.bin',
    'e101_LZ.bin',
    'e001_LZ.bin',
    'e162_LZ.bin',
    'e062_LZ.bin',
    'e137_LZ.bin',
    'e037_LZ.bin',
    'e154_LZ.bin',
    'e054_LZ.bin',
    'e129_LZ.bin',
    'e029_LZ.bin',
    'e058_LZ.bin',
    'e158_LZ.bin',
    'e025_LZ.bin',
    'e125_LZ.bin',
    'e046_LZ.bin',
    'e146_LZ.bin',
    'e091_LZ.bin',
    'e191_LZ.bin',
    'e183_LZ.bin',
    'e083_LZ.bin',
    'e181_LZ.bin',
    'e081_LZ.bin',
    'e093_LZ.bin',
    'e193_LZ.bin',
    'e200_LZ.bin',
    'e160_LZ.bin',
    'e060_LZ.bin',
    'e103_LZ.bin',
    'e003_LZ.bin',
    'e072_LZ.bin',
    'e172_LZ.bin',
    'e011_LZ.bin',
    'e111_LZ.bin',
    'e044_LZ.bin',
    'e144_LZ.bin',
    'e039_LZ.bin',
    'e139_LZ.bin',
    'e027_LZ.bin',
    'e127_LZ.bin',
    'e156_LZ.bin',
    'e056_LZ.bin',
    'e148_LZ.bin',
    'e048_LZ.bin',
    'e135_LZ.bin',
    'e035_LZ.bin',
    'e169_LZ.bin',
    'e069_LZ.bin',
    'e114_LZ.bin',
    'e014_LZ.bin',
    'e177_LZ.bin',
    'e077_LZ.bin',
    'e006_LZ.bin',
    'e106_LZ.bin',
    'e065_LZ.bin',
    'e165_LZ.bin',
    'e018_LZ.bin',
    'e118_LZ.bin',
    'e030_LZ.bin',
    'e130_LZ.bin',
    'e053_LZ.bin',
    'e153_LZ.bin',
    'e122_LZ.bin',
    'e022_LZ.bin',
    'e141_LZ.bin',
    'e041_LZ.bin',
    'e196_LZ.bin',
    'e096_LZ.bin',
    'e188_LZ.bin',
    'e088_LZ.bin',
    'e084_LZ.bin',
    'e184_LZ.bin',
    'e098_LZ.bin',
    'e198_LZ.bin',
    'e086_LZ.bin',
    'e186_LZ.bin',
    'e194_LZ.bin',
    'e094_LZ.bin',
    'e067_LZ.bin',
    'e167_LZ.bin',
    'e079_LZ.bin',
    'e179_LZ.bin',
    'e004_LZ.bin',
    'e104_LZ.bin',
    'e175_LZ.bin',
    'e075_LZ.bin',
    'e108_LZ.bin',
    'e008_LZ.bin',
    'e116_LZ.bin',
    'e016_LZ.bin',
    'e143_LZ.bin',
    'e043_LZ.bin',
    'e120_LZ.bin',
    'e020_LZ.bin',
    'e051_LZ.bin',
    'e151_LZ.bin',
    'e032_LZ.bin',
    'e132_LZ.bin',
    'e190_LZ.bin',
    'e090_LZ.bin',
    'e082_LZ.bin',
    'e182_LZ.bin',
    'e028_LZ.bin',
    'e128_LZ.bin',
    'e055_LZ.bin',
    'e155_LZ.bin',
    'e036_LZ.bin',
    'e136_LZ.bin',
    'e147_LZ.bin',
    'e047_LZ.bin',
    'e124_LZ.bin',
    'e024_LZ.bin',
    'e159_LZ.bin',
    'e059_LZ.bin',
    'e171_LZ.bin',
    'e071_LZ.bin',
    'e112_LZ.bin',
    'e012_LZ.bin',
    'e063_LZ.bin',
    'e163_LZ.bin',
    'e000_LZ.bin',
    'e100_LZ.bin',
    'e126_LZ.bin',
    'e026_LZ.bin',
    'e138_LZ.bin',
    'e038_LZ.bin',
    'e145_LZ.bin',
    'e045_LZ.bin',
    'e034_LZ.bin',
    'e134_LZ.bin',
    'e049_LZ.bin',
    'e149_LZ.bin',
    'e057_LZ.bin',
    'e157_LZ.bin',
    'e002_LZ.bin',
    'e102_LZ.bin',
    'e061_LZ.bin',
    'e161_LZ.bin',
    'e110_LZ.bin',
    'e010_LZ.bin',
    'e173_LZ.bin',
    'e073_LZ.bin',
    'e201_LZ.bin',
    'e080_LZ.bin',
    'e180_LZ.bin',
    'e192_LZ.bin',
    'e092_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
