prebuilt_files = [
    'event031_00_LZ.bin',
    'event050_01_LZ.bin',
    'event025_00_LZ.bin',
    'event004_00_LZ.bin',
    'event010_00_LZ.bin',
    'event033_01_LZ.bin',
    'event052_00_LZ.bin',
    'event027_01_LZ.bin',
    'event028_00_LZ.bin',
    'event006_01_LZ.bin',
    'event009_00_LZ.bin',
    'event002_00_LZ.bin',
    'event038_01_LZ.bin',
    'event037_00_LZ.bin',
    'event056_01_LZ.bin',
    'event023_00_LZ.bin',
    'event000_01_LZ.bin',
    'event035_01_LZ.bin',
    'event054_00_LZ.bin',
    'event021_01_LZ.bin',
    'event051_01_LZ.bin',
    'event024_00_LZ.bin',
    'event030_00_LZ.bin',
    'event005_00_LZ.bin',
    'event053_00_LZ.bin',
    'event026_01_LZ.bin',
    'event029_00_LZ.bin',
    'event032_01_LZ.bin',
    'event007_01_LZ.bin',
    'event008_00_LZ.bin',
    'event003_00_LZ.bin',
    'event057_01_LZ.bin',
    'event022_00_LZ.bin',
    'event036_00_LZ.bin',
    'event001_01_LZ.bin',
    'event055_00_LZ.bin',
    'event020_01_LZ.bin',
    'event034_01_LZ.bin',
    'event009_01_LZ.bin',
    'event006_00_LZ.bin',
    'event033_00_LZ.bin',
    'event028_01_LZ.bin',
    'event027_00_LZ.bin',
    'event052_01_LZ.bin',
    'event004_01_LZ.bin',
    'event010_01_LZ.bin',
    'event031_01_LZ.bin',
    'event025_01_LZ.bin',
    'event050_00_LZ.bin',
    'event035_00_LZ.bin',
    'event021_00_LZ.bin',
    'event054_01_LZ.bin',
    'event000_00_LZ.bin',
    'event037_01_LZ.bin',
    'event038_00_LZ.bin',
    'event023_01_LZ.bin',
    'event056_00_LZ.bin',
    'event002_01_LZ.bin',
    'event008_01_LZ.bin',
    'event007_00_LZ.bin',
    'event029_01_LZ.bin',
    'event026_00_LZ.bin',
    'event053_01_LZ.bin',
    'event032_00_LZ.bin',
    'event005_01_LZ.bin',
    'event024_01_LZ.bin',
    'event051_00_LZ.bin',
    'event030_01_LZ.bin',
    'event020_00_LZ.bin',
    'event055_01_LZ.bin',
    'event034_00_LZ.bin',
    'event001_00_LZ.bin',
    'event022_01_LZ.bin',
    'event057_00_LZ.bin',
    'event036_01_LZ.bin',
    'event003_01_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
