prebuilt_files = [
    'i001_LZ.bin',
    'i062_LZ.bin',
    'i013_LZ.bin',
    'i070_LZ.bin',
    'i025_LZ.bin',
    'i072_00.ntfp',
    'i058_LZ.bin',
    'i046_LZ.bin',
    'i037_LZ.bin',
    'i029_LZ.bin',
    'i054_LZ.bin',
    'i011_LZ.bin',
    'i060_LZ.bin',
    'i003_LZ.bin',
    'i072_01.ntfp',
    'i056_LZ.bin',
    'i035_LZ.bin',
    'i048_LZ.bin',
    'i039_LZ.bin',
    'i044_LZ.bin',
    'i027_LZ.bin',
    'i040_LZ.bin',
    'i023_LZ.bin',
    'i052_LZ.bin',
    'i031_LZ.bin',
    'i064_LZ.bin',
    'i019_LZ.bin',
    'i007_LZ.bin',
    'i068_LZ.bin',
    'i015_LZ.bin',
    'i072_02.ntft',
    'i033_LZ.bin',
    'i050_LZ.bin',
    'i021_LZ.bin',
    'i042_LZ.bin',
    'i017_LZ.bin',
    'i009_LZ.bin',
    'i005_LZ.bin',
    'i066_LZ.bin',
    'i047_LZ.bin',
    'i059_LZ.bin',
    'i024_LZ.bin',
    'i055_LZ.bin',
    'i028_LZ.bin',
    'i036_LZ.bin',
    'i063_LZ.bin',
    'i000_LZ.bin',
    'i071_LZ.bin',
    'i012_LZ.bin',
    'i072_00.ntft',
    'i072_01.ntft',
    'i049_LZ.bin',
    'i034_LZ.bin',
    'i057_LZ.bin',
    'i026_LZ.bin',
    'i045_LZ.bin',
    'i038_LZ.bin',
    'i010_LZ.bin',
    'i002_LZ.bin',
    'i061_LZ.bin',
    'i006_LZ.bin',
    'i018_LZ.bin',
    'i065_LZ.bin',
    'i014_LZ.bin',
    'i069_LZ.bin',
    'i072_02.ntfp',
    'i022_LZ.bin',
    'i041_LZ.bin',
    'i030_LZ.bin',
    'i053_LZ.bin',
    'i008_LZ.bin',
    'i016_LZ.bin',
    'i067_LZ.bin',
    'i004_LZ.bin',
    'i051_LZ.bin',
    'i032_LZ.bin',
    'i043_LZ.bin',
    'i020_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
